service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloudstack
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: cloudstack
  type: ClusterIP
